[UNDERTOW-2759] Enabling testing on JDK25  - Turning on compiler annotation processing on JDK23+  - Adding JDK25 to CI pipeline